Fixed overflow on X-Axist in history (CSS)
overflow-x: auto;

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
     flex-direction: column;
     height: 100%;
     width: 100%;
+    overflow-x: auto;
 }
 
 #histButtons {
